--- a/Portfolio/css/style.css
+++ b/Portfolio/css/style.css
@@ -11,9 +11,9 @@ body {
 }
 
 header {
-    padding: 30px;
+    padding: 32px;
     border-bottom: 1px solid #333;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgb(22, 22, 22);
 }
 
 .links {
@@ -40,7 +40,7 @@ header {
 
 #mess img {
     border-radius: 50%;
-    border: 2px solid rgb(255, 118, 87);
+    border: 5px solid rgb(255, 118, 87);
     margin-bottom: 32px;
     height: 250px;
 }
@@ -55,7 +55,8 @@ header {
     font-size: 24px;
     line-height: 34px;
     font-weight: normal;
-    margin-top: 8px;
+    margin-top: 12px;
+    color: rgb(255, 118, 87);
     opacity: 0.8;
 }
 
@@ -68,4 +69,41 @@ header {
 
 #link-center a {
     border-bottom: 1px solid rgb(255, 118, 87);
+}
+
+/*====CARDS====*/
+
+.cards {
+    padding-top: 32px;
+    max-width: 800px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px;
+}
+
+.card {
+    background-color: rgb(22, 22, 22);
+}
+
+.card_img-container img {
+    width: 100%;
+}
+
+.card_content, .card_info {
+    padding: 24px;
+
+}
+
+.card_info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.card_place {
+    background-color: rgb(255, 118, 87);
+    filter: brightness(100%);
+    padding: 5px 20px;
+    border-radius: 20px;
+    text-align: center;
 }
